Fix help icon alignment

--- a/frontend/src/app/formly/wrapper/form-label/form-label.component.scss
+++ b/frontend/src/app/formly/wrapper/form-label/form-label.component.scss
@@ -42,7 +42,7 @@
     width: 24px;
     margin-left: -28px;
     margin-right: 4px;
-    margin-top: 20px;
+    margin-top: 22px;
 
     ::ng-deep .mat-icon svg rect {
       fill: $ige-secondary;
